[build-system]
requires = ["setuptools>=67.6.1"]
build-backend = "setuptools.build_meta"

[project]
name = "scimpute"
version = "0.0.1"
requires-python = ">=3.11.3"

dependencies = [
    "numpy>=1.24.2",
    "pandas>=1.5.3",
    "matplotlib>=3.7.1",
    "scikit-learn>=1.2.2"

]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]